--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ a {
 }
 
 .introduce-image {
-    width: 30%;
+    width: 80%;
     height: 80%;
     max-width: 300px;
     margin-top:100px;
@@ -81,7 +81,8 @@ a {
 }
 
 .introduce-desc p {
-    margin-top: 150px;
+    margin-top: 100px;
+    margin-left: 50px;;
 }
 
 .introduce {
